Fix snackbar JS integration
Replace line 89's "<script src="/static/css/snackbar.min.js"></script>" with "<script src="/static/js/snackbar.min.js"></script>"

--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
 		
 		<!-- Snackbar -->
 		<link rel="stylesheet" href="/static/css/snackbar.min.css">
-		<script src="/static/css/snackbar.min.js"></script>
+		<script src="/static/js/snackbar.min.js"></script>
 	</head>
 	<body>
 		<header class="w3-container ut-pc-darkblue">
