Remove onload attribute from main#school_login

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
 			<h3>Schedules</h3>
 		</header>
 		{% if not school_valid %}
-		<main id="school_login" class="ut-pt-center" onload="show_redirect_snackbar()">
+		<main id="school_login" class="ut-pt-center">
 			<div id="selection" class="ut-pt-centerbox w3-card-4">
 				<main style="padding:12px;text-align:center;">
 					<select id="school_name" name="school_name" class="w3-input" onchange="window.location.href='/school?schoolid='+this.value;">
@@ -107,12 +107,10 @@
 		</main>
 		
 		<script>
-			function show_redirect_snackbar() {
-				Snackbar.show({
-					text: "Schedules has moved! Welcome to the new site. Please bookmark it.",
-					showAction: false
-				});
-			}
+			Snackbar.show({
+				text: "Schedules has moved! Welcome to the new site. Please bookmark it.",
+				showAction: false
+			});
 		</script>
 		{% else %}
 			{% if get_time_date %}
