--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
+		<meta name="apple-mobile-web-app-title" content="Schedules">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		
 		<link rel="shortcut icon" type="image/png" href="/static/img/pt_favicon.png"/>
 
 		<link rel="stylesheet" href="/static/css/center.css">
