--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 			}
 
 			@media screen and (max-width: 600px) {
-				header#school_info {
+				header#schedule_info {
 					padding: 12px 16px;
 					text-align: center;
 				}
@@ -58,10 +58,10 @@
 			}
 
 			@media screen and (min-width: 601px) {
-				header#school_info {
+				header#schedule_info {
 					padding: 6px 16px;
 				}
-				header#school_info div.ut-pc-right {
+				header#schedule_info div.ut-pc-right {
 					float: right!important;
 				}
 
