--- a/templates/index.html
+++ b/templates/index.html
@@ -171,7 +171,7 @@
                 }
 
                 function get_current_period() {
-                    if (times[schedule_id[current_day] != undefined) {
+                    if (typeof times[schedule_id[current_day] !== undefined) {
                         var days_schedule = times[schedule_id][current_day];
                         for (_period in days_schedule) {
                             period = days_schedule[_period]
