Add ".innerText" to line 289

--- a/templates/index.html
+++ b/templates/index.html
@@ -286,7 +286,7 @@
                     }
 
                     period_name.innerText = period_data_name;
-                    period_time_remaining = compiled_time_diff;
+                    period_time_remaining.innerText = compiled_time_diff;
                     date.innerText = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"][d.getDay()];
                     time.innerText = current_time_split.replace("-", ":");
                 }
