--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                         <h4>
                             {{ schedule_name }}
                             <div class="w3-right">
-                                <span id="date"></span> <span id="time"></span> <span class="seperator">|</span>
+                                <span id="date"></span> <span id="time"></span>
                             </div>
                         </h4>
                     </header>
