--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Schedules</title>
+		<title>Schedules (beta)</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -110,7 +110,7 @@
 			}
 		</script>
 		<header class="w3-container ut-pc-darkblue">
-			<h3>Schedules</h3>
+			<h3>Schedules <sub>beta</sub></h3>
 		</header>
 		{% if not schedule_valid %}
 		<main id="schedule_login" class="ut-pt-center">
