--- a/templates/index.html
+++ b/templates/index.html
@@ -205,12 +205,12 @@
 
                     if (start_time.indexOf("-") != -1) {
                         var _st = start_time.split("-"),
-                            st_hr = Number(start_time[0]),
-                            st_min = Number(start_time[1]);
+                            st_hr = Number(_st[0]),
+                            st_min = Number(_st[1]);
                     } else if (start_time.indexOf(":") != -1) {
                         var _st = start_time.split(":"),
-                            st_hr = Number(start_time[0]),
-                            st_min = Number(start_time[1]);
+                            st_hr = Number(_st[0]),
+                            st_min = Number(_st[1]);
                     } else {
                         var st_hr = Number(start_time.substring(0, 2)),
                             st_min = Number(start_time.substring(2, start_time.length));
@@ -218,12 +218,12 @@
 
                     if (end_time.indexOf("-") != -1) {
                         var _ed = end_time.split("-"),
-                            ed_hr = Number(end_time[0]),
-                            ed_min = Number(end_time[1]);
+                            ed_hr = Number(_ed[0]),
+                            ed_min = Number(_ed[1]);
                     } else if (end_time.indexOf(":") != -1) {
                         var _ed = end_time.split(":"),
-                            ed_hr = Number(end_time[0]),
-                            ed_min = Number(end_time[1]);
+                            ed_hr = Number(_ed[0]),
+                            ed_min = Number(_ed[1]);
                     } else {
                         var ed_hr = Number(end_time.substring(0, 2)),
                             ed_min = Number(end_time.substring(2, end_time.length));
