Add average-work-day colors
[skip travis]

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,10 @@
 				background-color: #1a468f;
 				color: #ffffff;
 			}
+			.color-average-work-day {
+				background-color: #188f24;
+				color: #ffffff;
+			}
 		</style>
 	</head>
 	<body>
