Move color styles to schedules-colors.css
[skip travis]

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon-180x180.png" />
 
 		<link rel="stylesheet" href="/static/css/center.css">
+		<link rel="stylesheet" href="/static/css/schedule-colors.css">
 		<link rel="stylesheet" href="https://w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap">
 
@@ -84,16 +85,6 @@
 				span#refresh:hover {
 					background-color: #cccccc;
 				}
-			}
-		</style>
-		<style>
-			.color-auhsd-ahs {
-				background-color: #1a468f;
-				color: #ffffff;
-			}
-			.color-average-work-day {
-				background-color: #188f24;
-				color: #ffffff;
 			}
 		</style>
 	</head>
