Add schedule name to window title
[skip travis]

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Schedules</title>
+		<title>Schedules{% if schedule_valid %}| {{ schedule_name }}{% endif %}</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
