--- a/templates/index.html
+++ b/templates/index.html
@@ -74,23 +74,19 @@
 				header#schedule_info div.ut-pc-right {
 					float: right!important;
 				}
-
-				span.seperator {
-					padding: 0 5px;
-				}
-
-				span#refresh {
-					padding: 0 0;
-				}
-				span#refresh:hover {
-					background-color: #cccccc;
-				}
 			}
 		</style>
 	</head>
 	<body>
 		<header class="w3-container ut-pc-darkblue">
-			<h3>Schedules</h3>
+			<h3>
+				Schedules
+				<div class="w3-right">
+					<svg style="width:30px;height:30px" viewBox="0 0 24 24">
+					    <path fill="#ffffff" d="M13.5,8H12V13L16.28,15.54L17,14.33L13.5,12.25V8M13,3A9,9 0 0,0 4,12H1L4.96,16.03L9,12H6A7,7 0 0,1 13,5A7,7 0 0,1 20,12A7,7 0 0,1 13,19C11.07,19 9.32,18.21 8.06,16.94L6.64,18.36C8.27,20 10.5,21 13,21A9,9 0 0,0 22,12A9,9 0 0,0 13,3" />
+					</svg>
+				</div>
+			</h3>
 		</header>
 		{% if not schedule_valid %}
 		<main id="schedule_login" class="ut-pt-center">
