--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -62,7 +62,16 @@
 	</head>
 	<body>
 		<header class="w3-container ut-pc-darkblue">
-			<h3>Schedules</h3>
+			<h3>
+				Schedules
+				<div class="w3-right">
+					<a href="/" target="_blank">
+						<svg style="width:30px;height:30px" viewBox="0 0 24 24">
+						    <path fill="#ffffff" d="M12 5.69L17 10.19V18H15V12H9V18H7V10.19L12 5.69M12 3L2 12H5V20H11V14H13V20H19V12H22L12 3Z" />
+						</svg>
+					</a>
+				</div>
+			</h3>
 		</header>
 
 		<main id="changelog_container" class="ut-pt-center">
