--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -65,7 +65,7 @@
 			<h3>
 				Schedules
 				<div class="w3-right">
-					<a href="/" target="_blank">
+					<a href="/">
 						<svg style="width:30px;height:30px" viewBox="0 0 24 24">
 						    <path fill="#ffffff" d="M12 5.69L17 10.19V18H15V12H9V18H7V10.19L12 5.69M12 3L2 12H5V20H11V14H13V20H19V12H22L12 3Z" />
 						</svg>
