Add lang="en" to the HTML tag
[skip travis]

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>Schedules{% if schedule_valid %} | {{ schedule_name }}{% endif %}</title>
 
