--- a/static/css/schedule-colors.css
+++ b/static/css/schedule-colors.css
@@ -1,12 +1,12 @@
-.color-auhsd-ahs {
+.color--ca-auhsd-ahs {
   background-color: #1a468f;
   color: #ffffff;
 }
-.color-auhsd-chs {
+.color--ca-auhsd-chs {
   background-color: #a80000;
   color: #ffffff;
 }
-.color-average-work-day {
+.color--un-average-workday {
   background-color: #188f24;
   color: #ffffff;
 }
