Update the schedule-colors CSS usage

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
 		{% else %}
             <main id="schedule_times" class="ut-pt-center">
                 <div id="times" class="ut-pt-centerbox w3-card-4">
-                    <header id="schedule_info" class="{% if schedule_color %}color-{{ schedule_color }}{% else %}w3-blue-gray{% endif %}">
+                    <header id="schedule_info" class="{% if schedule_color %}color--{{ schedule_color }}{% else %}w3-blue-gray{% endif %}">
                         <h4>
                             {{ schedule_name }}
                             <div class="w3-right">
