Force the dropdown to 25% width and set the...
...background to inherit

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,11 @@
 				background-color: #BCD4DE;
 				color: #000000;
 			}
+			
+			select#schedule_selection {
+				width: 25%;
+				background-color: inherit;
+			}
 
 			.w3-card-4 {
 				width: 75%;
