--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,6 @@
 			
 			select#schedule_selection {
 				width: 25%;
-				background-color: inherit;
 			}
 
 			.w3-card-4 {
@@ -114,7 +113,7 @@
                 <div id="times" class="ut-pt-centerbox w3-card-4">
                     <header id="schedule_info" class="{% if schedule_color %}color--{{ schedule_color }}{% else %}w3-blue-gray{% endif %}">
                         <h4>
-                            <select id="schedule_selection" class="w3-input" onchange="window.location.href='/schedule/'+this.value">
+                            <select id="schedule_selection" class="w3-input {% if schedule_color %}color--{{ schedule_color }}{% else %}w3-blue-gray{% endif %}" onchange="window.location.href='/schedule/'+this.value">
 				    {% for schedule in schedules %}
 				    	{% if schedule == schedule_id %}
 						<option value="{{ schedule }}" selected>{{ schedules[schedule] }}</option>
@@ -123,7 +122,7 @@
 				        {% endif %}
 				    {% endfor %}
 			    </select>
-                            <div class="w3-right">
+                            <div id="schedule_datetime" class="w3-right">
                                 <span id="date"></span> <span id="time"></span>
                             </div>
                         </h4>
