--- a/templates/index.html
+++ b/templates/index.html
@@ -141,6 +141,7 @@
                 </div>
             </main>
 
+	   		<script src="/static/js/notify.js"></script>
             <script>
                 var raw_json = '{{ raw_schedule_json|safe }}',
                     times = JSON.parse(raw_json),
@@ -273,7 +274,67 @@
                     period_time_remaining.innerText = compiled_time_diff;
                     date.innerText = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"][d.getDay()];
                     time.innerText = hours + ":" + minutes;
+					
+					var minutes_left = Number(time_difference[1]);
+					if (minutes_left == 15) {
+						if (!Notify.needsPermission) {
+							doNotification();
+						} else if (Notify.isSupported()) {
+							Notify.requestPermission(onPermissionGranted, onPermissionDenied);
+						}
+						
+						var fifteen_minute_notification = new Notify("Schedules - " + period_data_name, {
+							body: "Fifteen minutes left",
+							notifyShow: onNotifyShow
+						});
+					} else if (minutes_left == 10) {
+						if (!Notify.needsPermission) {
+							doNotification();
+						} else if (Notify.isSupported()) {
+							Notify.requestPermission(onPermissionGranted, onPermissionDenied);
+						}
+						
+						var ten_minute_notification = new Notify("Schedules - " + period_data_name, {
+							body: "Ten minutes left",
+							notifyShow: onNotifyShow
+						});
+					} else if (minutes_left == 5) {
+						if (!Notify.needsPermission) {
+							doNotification();
+						} else if (Notify.isSupported()) {
+							Notify.requestPermission(onPermissionGranted, onPermissionDenied);
+						}
+						
+						var five_minute_notification = new Notify("Schedules - " + period_data_name, {
+							body: "Five minutes left",
+							notifyShow: onNotifyShow
+						});
+					} else if (minutes_left == 10) {
+						if (!Notify.needsPermission) {
+							doNotification();
+						} else if (Notify.isSupported()) {
+							Notify.requestPermission(onPermissionGranted, onPermissionDenied);
+						}
+						
+						var one_minute_notification = new Notify("Schedules - " + period_data_name, {
+							body: "One minute left",
+							notifyShow: onNotifyShow
+						});
+					}
                 }
+				
+				function onPermissionGranted() {
+					console.log('Permission has been granted by the user');
+					doNotification();
+				}
+
+				function onPermissionDenied() {
+					console.warn('Permission has been denied by the user');
+				}
+				
+				function onNotifyShow() {
+					console.log("Showing notification....");
+				}
 		    
 		var one_second_loop = setInterval(update_period, 1000);
             </script>
