--- a/templates/index.html
+++ b/templates/index.html
@@ -137,11 +137,12 @@
                                 <span id="period_time_remaining"></span>
                             </div>
                         </h4>
+			    <button onclick="show_notification()">NOTIFY!</button>
                     </main>
                 </div>
             </main>
 
-	   		<script src="/static/js/notify.js"></script>
+	    <script src="/static/js/notify.js"></script>
             <script>
                 var raw_json = '{{ raw_schedule_json|safe }}',
                     times = JSON.parse(raw_json),
@@ -275,53 +276,66 @@
                     date.innerText = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"][d.getDay()];
                     time.innerText = hours + ":" + minutes;
 					
-					var minutes_left = Number(time_difference[1]);
-					if (minutes_left == 15) {
-						if (!Notify.needsPermission) {
-							doNotification();
-						} else if (Notify.isSupported()) {
-							Notify.requestPermission(onPermissionGranted, onPermissionDenied);
-						}
-						
-						var fifteen_minute_notification = new Notify("Schedules - " + period_data_name, {
-							body: "Fifteen minutes left",
-							notifyShow: onNotifyShow
-						});
-					} else if (minutes_left == 10) {
-						if (!Notify.needsPermission) {
-							doNotification();
-						} else if (Notify.isSupported()) {
-							Notify.requestPermission(onPermissionGranted, onPermissionDenied);
-						}
-						
-						var ten_minute_notification = new Notify("Schedules - " + period_data_name, {
-							body: "Ten minutes left",
-							notifyShow: onNotifyShow
-						});
-					} else if (minutes_left == 5) {
-						if (!Notify.needsPermission) {
-							doNotification();
-						} else if (Notify.isSupported()) {
-							Notify.requestPermission(onPermissionGranted, onPermissionDenied);
-						}
-						
-						var five_minute_notification = new Notify("Schedules - " + period_data_name, {
-							body: "Five minutes left",
-							notifyShow: onNotifyShow
-						});
-					} else if (minutes_left == 10) {
-						if (!Notify.needsPermission) {
-							doNotification();
-						} else if (Notify.isSupported()) {
-							Notify.requestPermission(onPermissionGranted, onPermissionDenied);
-						}
-						
-						var one_minute_notification = new Notify("Schedules - " + period_data_name, {
-							body: "One minute left",
-							notifyShow: onNotifyShow
-						});
-					}
+		var minutes_left = Number(time_difference[1]);
+		if (minutes_left == 15) {
+			if (!Notify.needsPermission) {
+				doNotification();
+			} else if (Notify.isSupported()) {
+				Notify.requestPermission(onPermissionGranted, onPermissionDenied);
+			}
+
+			var fifteen_minute_notification = new Notify("Schedules - " + period_data_name, {
+				body: "Fifteen minutes left",
+				notifyShow: onNotifyShow
+			});
+		} else if (minutes_left == 10) {
+			if (!Notify.needsPermission) {
+				doNotification();
+			} else if (Notify.isSupported()) {
+				Notify.requestPermission(onPermissionGranted, onPermissionDenied);
+			}
+
+			var ten_minute_notification = new Notify("Schedules - " + period_data_name, {
+				body: "Ten minutes left",
+				notifyShow: onNotifyShow
+			});
+		} else if (minutes_left == 5) {
+			if (!Notify.needsPermission) {
+				doNotification();
+			} else if (Notify.isSupported()) {
+				Notify.requestPermission(onPermissionGranted, onPermissionDenied);
+			}
+
+			var five_minute_notification = new Notify("Schedules - " + period_data_name, {
+				body: "Five minutes left",
+				notifyShow: onNotifyShow
+			});
+		} else if (minutes_left == 10) {
+			if (!Notify.needsPermission) {
+				doNotification();
+			} else if (Notify.isSupported()) {
+				Notify.requestPermission(onPermissionGranted, onPermissionDenied);
+			}
+
+			var one_minute_notification = new Notify("Schedules - " + period_data_name, {
+				body: "One minute left",
+				notifyShow: onNotifyShow
+			});
+		}
                 }
+		function show_notification() {
+			if (!Notify.needsPermission) {
+				doNotification();
+			} else {
+				Notify.requestPermission(onPermissionGranted, onPermissionDenied);
+			}
+		}
+		    function doNotification(period_name="Unknown Period", time_remaining="XX minutes") {
+		    	var notification_period_tr = new Notify("Schedules - " + period_name, {
+				body: time_remaining + " left",
+				notifyShow: onNotifyShow
+			});
+		    }
 				
 				function onPermissionGranted() {
 					console.log('Permission has been granted by the user');
