--- a/templates/index.html
+++ b/templates/index.html
@@ -146,6 +146,12 @@
                 var raw_json = '{{ raw_schedule_json|safe }}',
                     times = JSON.parse(raw_json),
                     d = new Date();
+		    
+		var period_name_old = "",
+	            fifteen_minute_notification = false,
+		    ten_minute_notification = false,
+		    five_minute_notification = false,
+		    one_minute_notification = false;
 
                 const schedule_id = "{{ schedule_id }}";
 
@@ -271,30 +277,31 @@
 			minutes = zero_time(current_time_split.split("-")[1]);
 
                     period_name.innerText = period_data_name;
+		    if (period_name_old != period_data_name) {
+		    	    fifteen_minute_notification = false;
+			    ten_minute_notification = false;
+			    five_minute_notification = false;
+			    one_minute_notification = false;
+		    }
                     period_time_remaining.innerText = compiled_time_diff;
                     date.innerText = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"][d.getDay()];
                     time.innerText = hours + ":" + minutes;
 					
 			var minutes_left = Number(time_difference[1]);
-			if (minutes_left == 15) {
+			if (minutes_left == 15 && !fifteen_minute_notification) {
 				show_notification(period_data_name, "Fifteen minutes");
-			} else if (minutes_left == 10) {
+				fifteen_minute_notification = true;
+			} else if (minutes_left == 10 && !ten_minute_notification) {
 				show_notification(period_data_name, "Ten minutes");
-			} else if (minutes_left == 5) {
+				ten_minute_notification = true;
+			} else if (minutes_left == 5 && !five_minute_notification) {
 				show_notification(period_data_name, "Five minutes");
-			} else if (minutes_left == 1) {
+				five_minute_notification = true;
+			} else if (minutes_left == 1 && !one_minute_notification) {
 				show_notification(period_data_name, "One minute");
+				one_minute_notification = true;
 			}
                 }
-		function show_notification_old(period_name="Unknown Period", time_remaining="XX minutes") {
-			if (window.Notification && Notification.permission !== "denied") {
-				Notification.requestPermission(function(status) {  // status is "granted", if accepted by user
-					var n = new Notification("Schedules - " + period_data_name, { 
-						body: time_remaining + " left"
-					}); 
-				});
-			}
-		}
 		function show_notification(period_name="Unknown Period", time_remaining="XX minutes") {
 			var title_text = "Schedules - " + period_name,
 			    body_text = time_remaining + " left";
