--- a/templates/index.html
+++ b/templates/index.html
@@ -283,7 +283,7 @@
 			minutes = zero_time(current_time_split.split("-")[1]);
 
                     period_name.innerText = period_data_name;
-		    if (period_different) {
+		    if (period_different == true) {
 		    	    fifteen_minute_notification = false;
 			    ten_minute_notification = false;
 			    five_minute_notification = false;
